--- a/.github/workflows/pullus_sheets_processing.yml
+++ b/.github/workflows/pullus_sheets_processing.yml
@@ -18,15 +18,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install pandas google-auth google-auth-oauthlib google-api-python-client gspread notebook
     - name: Create service account key file
-      run: |
-        python -c "
-import os
-import json
-creds_json = '${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}'
-parsed = json.loads(creds_json)
-with open('credentials.json', 'w') as f:
-    json.dump(parsed, f, indent=2)
-"
+      run: >
+        python -c 'import os, json; 
+        creds_json = "${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}";
+        parsed = json.loads(creds_json);
+        json.dump(parsed, open("credentials.json", "w"), indent=2)'
     - name: Convert Jupyter notebook to Python script
       run: |
         pip install nbconvert
