--- a/.github/workflows/pullus_sheets_processing.yml
+++ b/.github/workflows/pullus_sheets_processing.yml
@@ -18,11 +18,10 @@ jobs:
         python -m pip install --upgrade pip
         pip install pandas google-auth google-auth-oauthlib google-api-python-client gspread notebook
     - name: Create service account key file
-      run: >
-        python -c 'import os, json; 
-        creds_json = "${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}";
-        parsed = json.loads(creds_json);
-        json.dump(parsed, open("credentials.json", "w"), indent=2)'
+      env:
+        CREDS: ${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}
+      run: |
+        echo "$CREDS" > credentials.json
     - name: Convert Jupyter notebook to Python script
       run: |
         pip install nbconvert
