--- a/.github/workflows/pullus_sheets_processing.yml
+++ b/.github/workflows/pullus_sheets_processing.yml
@@ -1,39 +1,40 @@
 name: Google Sheets Data Processing
+
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 * * * *'  # Runs hourly
   workflow_dispatch:
 
 jobs:
   process-sheets-data:
     runs-on: ubuntu-latest
+    
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
       
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install pandas google-auth google-auth-oauthlib google-api-python-client gspread notebook
-        
-    - name: Create service account key file
-      env:
-        CREDS: ${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}
-      run: |
-        echo "$CREDS" > credentials.json
-        
-    - name: Convert Jupyter notebook to Python script
-      run: |
-        pip install nbconvert
-        jupyter nbconvert --to script transformation.ipynb
-        
-    - name: Run data processing script
-      env:
-        SPREADSHEET_URL: ${{ secrets.SPREADSHEET_URL }}
-        SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
-      run: python transformation.py
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+          
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pandas google-auth google-auth-oauthlib google-api-python-client gspread notebook
+          
+      - name: Create service account key file
+        env:
+          CREDS: ${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}
+        run: |
+          echo "$CREDS" > credentials.json
+          
+      - name: Convert Jupyter notebook to Python script
+        run: |
+          jupyter nbconvert --to script transformation.ipynb
+          
+      - name: Run data processing script
+        env:
+          SPREADSHEET_URL: ${{ secrets.SPREADSHEET_URL }}
+          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+        run: python transformation.py
