--- a/.github/workflows/pullus_sheets_processing.yml
+++ b/.github/workflows/pullus_sheets_processing.yml
@@ -1,43 +1,52 @@
-name: Pullus Sheets Processing  # Match the display name to your file name for consistency
-run-name: Process Google Sheets Data ${{ github.event.repository.name }}  # This adds a custom run name
+name: Pullus Sheets Processing
 
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 8-16 * * *'  # Runs every hour from 8am-4pm UTC (9am-5pm WAT)
+    - cron: '0 8-16 * * *'
 
 jobs:
-  sheets-processing:  # Job ID
-    name: 📊 Process Google Sheets Data  # This will show in the visual flow
+  setup:
+    name: 🔧 Setup Environment
     runs-on: ubuntu-latest
-    
     steps:
-      - name: 📥 Checkout repository
+      - name: Checkout repository
         uses: actions/checkout@v4
-      
-      - name: 🐍 Set up Python
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.9'
           cache: 'pip'
           cache-dependency-path: '**/requirements.txt'
-          
-      - name: 📦 Install dependencies
+      - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
-      - name: 🔑 Create service account key file
+
+  prepare:
+    needs: setup
+    name: 📋 Prepare Data
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Create service account key
         env:
           CREDS: ${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}
+        run: echo "$CREDS" > credentials.json
+      - name: Convert Jupyter notebook
         run: |
-          echo "$CREDS" > credentials.json
-          
-      - name: 📝 Convert Jupyter notebook
-        run: |
+          pip install notebook
           jupyter nbconvert --to script transformation.ipynb
-          
-      - name: 🔄 Run data processing script
+
+  process:
+    needs: prepare
+    name: 📊 Process Data
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Run processing script
         env:
           SPREADSHEET_URL: ${{ secrets.SPREADSHEET_URL }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
