--- a/.github/workflows/pullus_sheets_processing.yml
+++ b/.github/workflows/pullus_sheets_processing.yml
@@ -1,10 +1,8 @@
 name: Pullus Sheets Processing
-
 on:
   workflow_dispatch:
   schedule:
     - cron: '0 8-16 * * *'
-
 jobs:
   setup:
     name: 🔧 Setup Environment
@@ -30,14 +28,20 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
       - name: Create service account key
         env:
           CREDS: ${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}
         run: echo "$CREDS" > credentials.json
       - name: Convert Jupyter notebook
-        run: |
-          pip install notebook
-          jupyter nbconvert --to script transformation.ipynb
+        run: jupyter nbconvert --to script transformation.ipynb
 
   process:
     needs: prepare
@@ -46,8 +50,22 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-      - name: Run processing script
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.9'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+      - name: Create service account key
+        env:
+          CREDS: ${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}
+        run: echo "$CREDS" > credentials.json
+      - name: Convert notebook and run script
         env:
           SPREADSHEET_URL: ${{ secrets.SPREADSHEET_URL }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
-        run: python transformation.py
+        run: |
+          jupyter nbconvert --to script transformation.ipynb
+          python transformation.py
