--- a/.github/workflows/pullus_sheets_processing.yml
+++ b/.github/workflows/pullus_sheets_processing.yml
@@ -1,71 +1,43 @@
-name: Pullus Sheets Processing
+name: Pullus Sheets Processing  
+
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 8-16 * * *'
+    - cron: '0 8-16 * * *'  # Runs every hour from 8am-4pm UTC (9am-5pm WAT)
+
 jobs:
-  setup:
-    name: 🔧 Setup Environment
+  sheets-processing:  # Job ID
+    name: 📊 Process Google Sheets Data  
     runs-on: ubuntu-latest
+    
     steps:
-      - name: Checkout repository
+      - name: 📥 Checkout repository
         uses: actions/checkout@v4
-      - name: Set up Python
+      
+      - name: 🐍 Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.9'
           cache: 'pip'
           cache-dependency-path: '**/requirements.txt'
-      - name: Install dependencies
+          
+      - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-  prepare:
-    needs: setup
-    name: 📋 Prepare Data
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.9'
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Create service account key
+          
+      - name: 🔑 Create service account key file
         env:
           CREDS: ${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}
-        run: echo "$CREDS" > credentials.json
-      - name: Convert Jupyter notebook
-        run: jupyter nbconvert --to script transformation.ipynb
-
-  process:
-    needs: prepare
-    name: 📊 Process Data
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.9'
-      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Create service account key
-        env:
-          CREDS: ${{ secrets.GOOGLE_SHEETS_CREDENTIALS }}
-        run: echo "$CREDS" > credentials.json
-      - name: Convert notebook and run script
+          echo "$CREDS" > credentials.json
+          
+      - name: 📝 Convert Jupyter notebook
+        run: |
+          jupyter nbconvert --to script transformation.ipynb
+          
+      - name: 🔄 Run data processing script
         env:
           SPREADSHEET_URL: ${{ secrets.SPREADSHEET_URL }}
           SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
-        run: |
-          jupyter nbconvert --to script transformation.ipynb
-          python transformation.py
+        run: python transformation.py
