--- a/.github/workflows/pullus_sheets_processing.yml
+++ b/.github/workflows/pullus_sheets_processing.yml
@@ -34,6 +34,6 @@ jobs:
           
       - name: 🔄 Run data processing script
         env:
-          SPREADSHEET_URL: ${{ secrets.SPREADSHEET_URL }}
-          SPREADSHEET_ID: ${{ secrets.SPREADSHEET_ID }}
+          SOURCE_SPREADSHEET_ID: ${{ secrets.SOURCE_SPREADSHEET_ID }}
+          OUTPUT_SPREADSHEET_ID: ${{ secrets.OUTPUT_SPREADSHEET_ID }}
         run: python transformation.py
